# blog-examples

django-pagination/: Makefile  README.md  manage.py  pyproject.toml
django-pagination/app/: settings.py  urls.py
django-pagination/blog/: models.py  serializers.py
django-pagination/blog/migrations/: 0001_initial.py
